--- a/src/pages/about/contact.astro
+++ b/src/pages/about/contact.astro
@@ -1,4 +1,4 @@
 ---
 export const prerender = true;
-throw Astro.redirect('/about/locations/#contact');
+return Astro.redirect('/about/locations/#contact');
 ---
