--- a/src/pages/programs/index.astro
+++ b/src/pages/programs/index.astro
@@ -1,13 +1,13 @@
 ---
-import BaseLayout from "../layouts/BaseLayout.astro";
-import SectionHeader from "../components/SectionHeader.astro";
-import Section from "../components/Section.astro";
-import HeroSection from "../components/HeroSection.astro";
-import ProgramCard from "../components/ProgramCard.astro";
-import CardBody from "../components/CardBody.astro";
-import CardFooter from "../components/CardFooter.astro";
-import CalloutCard from "../components/CalloutCard.astro";
-import CardGrid from "../components/CardGrid.astro";
+import BaseLayout from "../../layouts/BaseLayout.astro";
+import SectionHeader from "../../components/SectionHeader.astro";
+import Section from "../../components/Section.astro";
+import HeroSection from "../../components/HeroSection.astro";
+import ProgramCard from "../../components/ProgramCard.astro";
+import CardBody from "../../components/CardBody.astro";
+import CardFooter from "../../components/CardFooter.astro";
+import CalloutCard from "../../components/CalloutCard.astro";
+import CardGrid from "../../components/CardGrid.astro";
 
 // Programs data moved from _index.yaml
 const yamlContent = {
