--- a/src/pages/programs/programming-merit-badge.astro
+++ b/src/pages/programs/programming-merit-badge.astro
@@ -1,7 +1,7 @@
 ---
-import BaseLayout from '../../../layouts/BaseLayout.astro';
-import SectionHeader from '../../../components/SectionHeader.astro';
-import CalloutCard from '../../../components/CalloutCard.astro';
+import BaseLayout from '../../layouts/BaseLayout.astro';
+import SectionHeader from '../../components/SectionHeader.astro';
+import CalloutCard from '../../components/CalloutCard.astro';
 
 const classOptions = [
   {
