--- a/src/pages/programs/python-vs-java.astro
+++ b/src/pages/programs/python-vs-java.astro
@@ -1,8 +1,8 @@
 ---
-import BaseLayout from '../../../layouts/BaseLayout.astro';
-import SectionHeader from '../../../components/SectionHeader.astro';
-import CalloutCard from '../../../components/CalloutCard.astro';
-import { siteConfig } from '../../../config/site';
+import BaseLayout from '../../layouts/BaseLayout.astro';
+import SectionHeader from '../../components/SectionHeader.astro';
+import CalloutCard from '../../components/CalloutCard.astro';
+import { siteConfig } from '../../config/site';
 
 const address = siteConfig.cv_classroom_address;
 ---
