--- a/src/pages/programs/python.astro
+++ b/src/pages/programs/python.astro
@@ -1,8 +1,8 @@
 ---
-import BaseLayout from '../../../layouts/BaseLayout.astro';
-import SectionHeader from '../../../components/SectionHeader.astro';
-import PikeWidget from '../../../components/PikeWidget.astro';
-import CalloutCard from '../../../components/CalloutCard.astro';
+import BaseLayout from '../../layouts/BaseLayout.astro';
+import SectionHeader from '../../components/SectionHeader.astro';
+import PikeWidget from '../../components/PikeWidget.astro';
+import CalloutCard from '../../components/CalloutCard.astro';
 
 const heroHighlights = [
   'Python is the most popular programming language',
